--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -5,5 +5,5 @@ description: Grafana pdf exporter is a tool to easily export any Grafana dashboa
 maintainers:
 - name: Nuclia Cloud Team
   email: cloud@nuclia.com
-name: grafana-exporter
-version: 1.0.0
+name: grafana-reporter
+version: 0.0.1
